<resources>
    <string name="app_name">MuseumFinder</string>
    <string name="title_activity_list_places">ListPlacesActivity</string>
    <string name="title_activity_favs">FavsActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="pref_radius_limit">Radius limit: 5000</string>
    <string name="pref_radius_summary">Distance of detection (m)</string>

    <string name="btn_museums">Museums</string>
    <string name="btn_gallery">Art galleries</string>
    <string name="btn_worship">Places of worship</string>
    <string name="btn_all">All places</string>
    <string name="btn_favs">My comments</string>
    <string name="btn_show">Show on map</string>

    <string name="lista_vacia">No data found</string>
    <string name="label_content">Comment content</string>
    <string name="label_place_name">Place name</string>

    <string name="menu_create">New comment</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_save">Save</string>
    <string name="menu_delete_comment">Delete</string>
    <string name="menu_save_comment">Save</string>
    <string name="menu_cancel_comment">Cancel</string>
    <string name="menu_edit_comment">Edit</string>

</resources>
