<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="es.unex.saee.museumfinder.activity.CommentsFormActivity">

<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp" >

    <TextView
        android:id="@+id/label_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_content"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/label_content"
        android:ems="10" />

    <TextView
        android:id="@+id/label_place_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_place_name"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_below="@+id/content"
        android:layout_marginTop="20dp" />

    <EditText
        android:id="@+id/place_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/label_place_name"
        android:ems="10"
        android:inputType="textMultiLine">
    </EditText>

    <LinearLayout
        android:id="@+id/botonera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/place_name"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_cancel" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_save" />

    </LinearLayout>
</RelativeLayout>

</ScrollView>

