<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="es.unex.saee.museumfinder.MainActivity">

    <Button
        android:text="@string/btn_museums"
        android:layout_width="wrap_content"
        android:minWidth="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/btn_museum"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:elevation="0dp" />

    <Button
        android:text="@string/btn_favs"
        android:layout_width="wrap_content"
        android:minWidth="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/btn_favs"
        android:layout_alignTop="@+id/btn_worship"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp" />

    <Button
        android:text="@string/btn_worship"
        android:layout_width="wrap_content"
        android:minWidth="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/btn_worship"
        android:layout_marginTop="60dp"
        android:layout_alignTop="@+id/btn_gallery"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/btn_gallery"
        android:layout_width="wrap_content"
        android:minWidth="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/btn_gallery"
        android:layout_marginTop="60dp"
        android:layout_alignTop="@+id/btn_museum"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/btn_all"
        android:layout_width="wrap_content"
        android:minWidth="200dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btn_favs"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:id="@+id/btn_all" />

    <Button
        android:text="Settings"
        android:layout_width="wrap_content"
        android:minWidth="100dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="36dp"
        android:layout_marginStart="36dp"
        android:id="@+id/btn_settings"
        android:layout_alignBaseline="@+id/btn_login"
        android:layout_alignBottom="@+id/btn_login"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="Login"
        android:layout_width="wrap_content"
        android:minWidth="100dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="39dp"
        android:id="@+id/btn_login"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>
